src/content/docs/sdk/cordova/v4/features/callbacks.mdx
---
title: Set up callbacks
description:
   Set up callbacks to trigger functions when the SDK sends information
   to Adjust.
slug: en/sdk/cordova/v4/features/callbacks
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v5: /en/sdk/cordova/features/callbacks
---

Set up callbacks to trigger functions when the SDK sends information to Adjust. You can set up callbacks for sessions and events.

<Callout type="important">

You must register your callbacks **before** initializing the SDK.

</Callout>

## Session callbacks {#session-callbacks}

Set up session callbacks to trigger functions when the SDK sends session information. You can create **success** callbacks and **failure** callbacks. **Success** callbacks trigger when the SDK sends information to Adjust's servers. **Failure** callbacks trigger when the SDK encounters a problem while sending the information.

Session callbacks have access to a response data object. You can use its properties in your callback function.

<Table autoWidth="1,2,3">

| Property       | Data type                | Description                                                            |
| -------------- | ------------------------ | ---------------------------------------------------------------------- |
| `Message`      | `string`                 | The message from the server or the error logged by the SDK.            |
| `Timestamp`    | `string`                 | The timestamp from Adjust's servers.                                   |
| `Adid`         | `string`                 | A unique device identifier provided by Adjust.                         |
| `JsonResponse` | `object<string, object>` | The JSON object with the response from the server.                     |
| `WillRetry`    | `boolean`                | Indicates whether there will be an attempt to resend a failed package. |

</Table>

### Success callbacks {#success-callbacks}

<CodeBlock title="Method signature">

```js
setSessionTrackingSucceededCallbackListener(
   sessionTrackingSucceededCallback: (session: AdjustSessionSuccess) => void
)
```

</CodeBlock>

Set up success callbacks to trigger functions when the SDK records a session.

```js
var adjustConfig = new AdjustConfig(appToken, environment);

adjustConfig.setSessionTrackingSucceededCallbackListener(
   function (sessionSuccess) {
      // Printing all session success properties.
      console.log("Session tracking succeeded!");
      console.log(sessionSuccess.message);
      console.log(sessionSuccess.timestamp);
      console.log(sessionSuccess.adid);
      console.log(sessionSuccess.jsonResponse);
   },
);

Adjust.create(adjustConfig);
```

#### Example {#example}

This example shows how to register a `sessionTrackingSucceededCallback` that prints the timestamp at which the SDK sent the session data to Adjust.

```js
var adjustConfig = new AdjustConfig(appToken, environment);

adjustConfig.setSessionTrackingSucceededCallbackListener(
   function (sessionSuccess) {
      console.log(`Session recorded at ${sessionSuccess.timestamp}`);
   },
);

Adjust.create(adjustConfig);
```

### Failure callbacks {#failure-callbacks}

<CodeBlock title="Method signature">

```js
setSessionTrackingFailedCallbackListener(sessionTrackingFailedCallback: (session: AdjustSessionFailure) => void)
```

</CodeBlock>

Set up failure callbacks to trigger functions when the SDK fails to record a session.

```js
var adjustConfig = new AdjustConfig(appToken, environment);

adjustConfig.setSessionTrackingFailedCallbackListener(
   function (sessionFailure) {
      // Printing all session failure properties.
      console.log("Session tracking failed!");
      console.log(sessionFailure.message);
      console.log(sessionFailure.timestamp);
      console.log(sessionFailure.adid);
      console.log(sessionFailure.willRetry);
      console.log(sessionFailure.jsonResponse);
   },
);

Adjust.create(adjustConfig);
```

#### Example {#example}

This example shows how to register a `sessionTrackingFailedCallback` that prints the reason the SDK failed to send the session data.

```js
var adjustConfig = new AdjustConfig(appToken, environment);

adjustConfig.setSessionTrackingFailedCallbackListener(
   function (sessionFailure) {
      console.log(
         `SDK failed to record session due to ${sessionFailure.message}`,
      );
   },
);

Adjust.create(adjustConfig);
```

## Event callbacks {#event-callbacks}

Set up event callbacks to trigger functions when the SDK sends event information. You can create **success** callbacks and **failure** callbacks. **Success** callbacks trigger when the SDK sends information to Adjust's servers. **Failure** callbacks trigger when the SDK encounters a problem while sending the information.

Event callbacks have access to a response data object. You can use its properties in your callback function.

<Table autoWidth="1,2,3">

| Property       | Data type                | Description                                                            |
| -------------- | ------------------------ | ---------------------------------------------------------------------- |
| `Message`      | `string`                 | The message from the server or the error logged by the SDK.            |
| `Timestamp`    | `string`                 | The timestamp from Adjust's servers.                                   |
| `Adid`         | `string`                 | A unique device identifier provided by Adjust.                         |
| `JsonResponse` | `object<string, object>` | The JSON object with the response from the server.                     |
| `EventToken`   | `string`                 | The event token                                                        |
| `CallbackId`   | `string`                 | The custom callback ID set on the event object                         |
| `WillRetry`    | `boolean`                | Indicates whether there will be an attempt to resend a failed package. |

</Table>

### Success callbacks {#success-callbacks}

<CodeBlock title="Method signature">

```js
setEventTrackingSucceededCallbackListener(eventTrackingSucceededCallback: (event: AdjustEventSuccess) => void)
```

</CodeBlock>

Set up success callbacks to trigger functions when the SDK records an event.

```js
var adjustConfig = new AdjustConfig(appToken, environment);

adjustConfig.setEventTrackingSucceededCallbackListener(function (eventSuccess) {
   // Printing all event success properties.
   console.log("Event tracking succeeded!");
   console.log(eventSuccess.message);
   console.log(eventSuccess.timestamp);
   console.log(eventSuccess.eventToken);
   console.log(eventSuccess.callbackId);
   console.log(eventSuccess.adid);
   console.log(eventSuccess.jsonResponse);
});

Adjust.create(adjustConfig);
```

#### Example {#example}

This example shows how to register a `eventTrackingSucceededCallback` that prints the timestamp at which the SDK sent the event data to Adjust.

```js
var adjustConfig = new AdjustConfig(appToken, environment);

adjustConfig.setEventTrackingSucceededCallbackListener(function (eventSuccess) {
   console.log(`Event recorded at ${eventSuccess.timestamp}`);
});

Adjust.create(adjustConfig);
```

### Failure callbacks {#failure-callbacks}

<CodeBlock title="Method signature">

```js
setEventTrackingFailedCallbackListener(eventTrackingFailedCallback: (event: AdjustEventFailure) => void)
```

</CodeBlock>

Set up failure callbacks to trigger functions when the SDK fails to record an event.

```js
var adjustConfig = new AdjustConfig(appToken, environment);

adjustConfig.setEventTrackingFailedCallbackListener(function (eventFailure) {
   // Printing all event failure properties.
   console.log("Event tracking failed!");
   console.log(eventFailure.message);
   console.log(eventFailure.timestamp);
   console.log(eventFailure.eventToken);
   console.log(eventFailure.callbackId);
   console.log(eventFailure.adid);
   console.log(eventFailure.willRetry);
   console.log(eventFailure.jsonResponse);
});

Adjust.create(adjustConfig);
```

#### Example {#example}

This example shows how to register a `eventFailureCallback` that prints the reason the SDK failed to send the event data.

```js
var adjustConfig = new AdjustConfig(appToken, environment);

adjustConfig.setEventTrackingFailedCallbackListener(function (eventFailure) {
   console.log(`SDK failed to record event due to ${eventFailure.message}`);
});

Adjust.create(adjustConfig);
```
